// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Radio > Radio baseVue demo works fine 1`] = `
<div>
  <div
    class="t-radio-group radio-group-demo"
    role="radiogroup"
  >
    <!---->
    
    <div
      class="t-radio t-radio--left t-radio--block"
    >
      <input
        class="t-radio__original"
        name="radio"
        type="radio"
        value="1"
      />
      <div
        class="t-radio__icon t-radio__icon--left"
      >
        <div
          class="t-radio__icon-circle"
        />
        <!---->
      </div>
      <div
        class="t-radio__content"
      >
        <span
          class="t-radio__title"
          style=""
        >
          单选
        </span>
        <!---->
      </div>
      <div
        class="t-radio__border t-radio__border--left"
      />
    </div>
    <div
      class="t-radio t-radio--left t-radio--block"
    >
      <input
        class="t-radio__original"
        name="radio"
        type="radio"
        value="2"
      />
      <div
        class="t-radio__icon t-radio__icon--left"
      >
        <div
          class="t-radio__icon-circle"
        />
        <!---->
      </div>
      <div
        class="t-radio__content"
      >
        <span
          class="t-radio__title"
          style=""
        >
          单选
        </span>
        <!---->
      </div>
      <div
        class="t-radio__border t-radio__border--left"
      />
    </div>
    <div
      class="t-radio t-radio--left t-radio--block"
    >
      <input
        class="t-radio__original"
        name="radio"
        type="radio"
        value="3"
      />
      <div
        class="t-radio__icon t-radio__icon--left t-radio__icon--checked"
      >
        <svg
          class="t-icon t-icon-check-circle-filled t-radio__icon-wrap"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M12 23a11 11 0 100-22 11 11 0 000 22zM7.5 10.59l3 3 6-6L17.91 9l-7.41 7.41L6.09 12l1.41-1.41z"
            fill="currentColor"
          />
        </svg>
        <!---->
      </div>
      <div
        class="t-radio__content"
      >
        <span
          class="t-radio__title"
          style=""
        >
          单选单选单选单选单选单选单选单选单选单选单选单选单选单选单选单选单选单选
        </span>
        <!---->
      </div>
      <div
        class="t-radio__border t-radio__border--left"
      />
    </div>
    <div
      class="t-radio t-radio--left t-radio--block"
    >
      <input
        class="t-radio__original"
        name="radio"
        type="radio"
        value="4"
      />
      <div
        class="t-radio__icon t-radio__icon--left"
      >
        <div
          class="t-radio__icon-circle"
        />
        <!---->
      </div>
      <div
        class="t-radio__content"
      >
        <span
          class="t-radio__title"
          style=""
        >
          单选
        </span>
        <div
          class="t-radio__description"
          style=""
        >
          描述信息描述信息描述信息描述信息描述信息描述信息描述信息描述信息描述信息描述信息
        </div>
      </div>
      <div
        class="t-radio__border t-radio__border--left"
      />
    </div>
    
  </div>
</div>
`;

exports[`Radio > Radio cardVue demo works fine 1`] = `
<div>
  <div
    class="t-radio-group theme-card"
    role="radiogroup"
  >
    <!---->
    
    <div
      class="t-radio t-radio--left t-radio--block"
    >
      <input
        class="t-radio__original"
        name="radio3"
        type="radio"
        value="1"
      />
      <div
        class="t-radio__icon t-radio__icon--left t-radio__icon--checked"
      >
        <svg
          class="t-icon t-icon-check-circle-filled t-radio__icon-wrap"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M12 23a11 11 0 100-22 11 11 0 000 22zM7.5 10.59l3 3 6-6L17.91 9l-7.41 7.41L6.09 12l1.41-1.41z"
            fill="currentColor"
          />
        </svg>
        <!---->
      </div>
      <div
        class="t-radio__content"
      >
        <span
          class="t-radio__title"
          style=""
        >
          单选
        </span>
        <!---->
      </div>
      <div
        class="t-radio__border t-radio__border--left"
      />
    </div>
    <div
      class="t-radio t-radio--left t-radio--block"
    >
      <input
        class="t-radio__original"
        name="radio3"
        type="radio"
        value="2"
      />
      <div
        class="t-radio__icon t-radio__icon--left"
      >
        <div
          class="t-radio__icon-circle"
        />
        <!---->
      </div>
      <div
        class="t-radio__content"
      >
        <span
          class="t-radio__title"
          style=""
        >
          单选
        </span>
        <!---->
      </div>
      <div
        class="t-radio__border t-radio__border--left"
      />
    </div>
    <div
      class="t-radio t-radio--left t-radio--block"
    >
      <input
        class="t-radio__original"
        name="radio3"
        type="radio"
        value="4"
      />
      <div
        class="t-radio__icon t-radio__icon--left"
      >
        <div
          class="t-radio__icon-circle"
        />
        <!---->
      </div>
      <div
        class="t-radio__content"
      >
        <span
          class="t-radio__title"
          style=""
        >
          单选标题多行单选标题多行单选标题多行单选标题多行单选标题多行
        </span>
        <!---->
      </div>
      <div
        class="t-radio__border t-radio__border--left"
      />
    </div>
    
  </div>
</div>
`;

exports[`Radio > Radio customVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-radio-group"
    data-v-5173b2c6=""
    role="radiogroup"
  >
    <!---->
    
    
    <view
      class="card card--active"
      data-v-5173b2c6=""
    >
      <svg
        class="t-icon t-icon-check card__icon"
        data-v-5173b2c6=""
      >
        <use
          href="#t-icon-check"
        />
      </svg>
      <div
        class="t-radio t-radio--left t-radio--block"
        data-v-5173b2c6=""
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="0"
        />
        <div
          class="t-radio__icon t-radio__icon--left t-radio__icon--checked"
        >
          <!---->
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            单选
          </span>
          <div
            class="t-radio__description"
            style=""
          >
            描述信息描述信息描述信息描述信息描述信息
          </div>
        </div>
        <!---->
      </div>
    </view>
    <view
      class="card"
      data-v-5173b2c6=""
    >
      <!--v-if-->
      <div
        class="t-radio t-radio--left t-radio--block"
        data-v-5173b2c6=""
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="1"
        />
        <div
          class="t-radio__icon t-radio__icon--left"
        >
          <!---->
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            单选
          </span>
          <div
            class="t-radio__description"
            style=""
          >
            描述信息描述信息描述信息描述信息描述信息
          </div>
        </div>
        <!---->
      </div>
    </view>
    <view
      class="card"
      data-v-5173b2c6=""
    >
      <!--v-if-->
      <div
        class="t-radio t-radio--left t-radio--block"
        data-v-5173b2c6=""
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="2"
        />
        <div
          class="t-radio__icon t-radio__icon--left"
        >
          <!---->
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            单选
          </span>
          <div
            class="t-radio__description"
            style=""
          >
            描述信息描述信息描述信息描述信息描述信息
          </div>
        </div>
        <!---->
      </div>
    </view>
    
    
  </div>
  <view
    class="demo-desc"
    data-v-5173b2c6=""
  >
    横向卡片单选框
  </view>
  <div
    class="t-radio-group horizontal-box"
    data-v-5173b2c6=""
    role="radiogroup"
  >
    <!---->
    
    
    <view
      class="card card--active"
      data-v-5173b2c6=""
    >
      <svg
        class="t-icon t-icon-check card__icon"
        data-v-5173b2c6=""
      >
        <use
          href="#t-icon-check"
        />
      </svg>
      <div
        class="t-radio t-radio--left t-radio--block"
        data-v-5173b2c6=""
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="0"
        />
        <div
          class="t-radio__icon t-radio__icon--left t-radio__icon--checked"
        >
          <!---->
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            单选
          </span>
          <!---->
        </div>
        <!---->
      </div>
    </view>
    <view
      class="card"
      data-v-5173b2c6=""
    >
      <!--v-if-->
      <div
        class="t-radio t-radio--left t-radio--block"
        data-v-5173b2c6=""
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="1"
        />
        <div
          class="t-radio__icon t-radio__icon--left"
        >
          <!---->
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            单选
          </span>
          <!---->
        </div>
        <!---->
      </div>
    </view>
    <view
      class="card"
      data-v-5173b2c6=""
    >
      <!--v-if-->
      <div
        class="t-radio t-radio--left t-radio--block"
        data-v-5173b2c6=""
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
          value="2"
        />
        <div
          class="t-radio__icon t-radio__icon--left"
        >
          <!---->
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            单选
          </span>
          <!---->
        </div>
        <!---->
      </div>
    </view>
    
    
  </div>
  
</div>
`;

exports[`Radio > Radio horizontalVue demo works fine 1`] = `
<div
  class="t-radio-group box"
  role="radiogroup"
>
  <!---->
  
  <div
    class="t-radio t-radio--left"
  >
    <input
      class="t-radio__original"
      name="radio"
      type="radio"
      value="1"
    />
    <div
      class="t-radio__icon t-radio__icon--left"
    >
      <div
        class="t-radio__icon-circle"
      />
      <!---->
    </div>
    <div
      class="t-radio__content"
    >
      <span
        class="t-radio__title"
        style=""
      >
        单选标题
      </span>
      <!---->
    </div>
    <!---->
  </div>
  <div
    class="t-radio t-radio--left"
  >
    <input
      class="t-radio__original"
      name="radio"
      type="radio"
      value="2"
    />
    <div
      class="t-radio__icon t-radio__icon--left"
    >
      <div
        class="t-radio__icon-circle"
      />
      <!---->
    </div>
    <div
      class="t-radio__content"
    >
      <span
        class="t-radio__title"
        style=""
      >
        单选标题
      </span>
      <!---->
    </div>
    <!---->
  </div>
  <div
    class="t-radio t-radio--left"
  >
    <input
      class="t-radio__original"
      name="radio"
      type="radio"
      value="3"
    />
    <div
      class="t-radio__icon t-radio__icon--left t-radio__icon--checked"
    >
      <svg
        class="t-icon t-icon-check-circle-filled t-radio__icon-wrap"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 23a11 11 0 100-22 11 11 0 000 22zM7.5 10.59l3 3 6-6L17.91 9l-7.41 7.41L6.09 12l1.41-1.41z"
          fill="currentColor"
        />
      </svg>
      <!---->
    </div>
    <div
      class="t-radio__content"
    >
      <span
        class="t-radio__title"
        style=""
      >
        单选标题
      </span>
      <!---->
    </div>
    <!---->
  </div>
  
</div>
`;

exports[`Radio > Radio iconVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-radio t-radio--left t-radio--block block"
    data-v-9c2f6eb6=""
  >
    <input
      class="t-radio__original"
      name=""
      type="radio"
    />
    <div
      class="t-radio__icon t-radio__icon--left t-radio__icon--checked"
    >
      <svg
        class="t-icon t-icon-check t-radio__icon-wrap"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M20.99 7.38l-10.61 10.6L4 11.63l1.42-1.41 4.95 4.95 9.2-9.2 1.4 1.42z"
          fill="currentColor"
        />
      </svg>
      <!---->
    </div>
    <div
      class="t-radio__content"
    >
      <span
        class="t-radio__title"
        style=""
      >
        单选
      </span>
      <!---->
    </div>
    <div
      class="t-radio__border t-radio__border--left"
    />
  </div>
  <div
    class="t-radio t-radio--left t-radio--block block"
    data-v-9c2f6eb6=""
  >
    <input
      class="t-radio__original"
      name=""
      type="radio"
    />
    <div
      class="t-radio__icon t-radio__icon--left t-radio__icon--checked"
    >
      <div
        class="t-radio__icon-dot"
      />
      <!---->
    </div>
    <div
      class="t-radio__content"
    >
      <span
        class="t-radio__title"
        style=""
      >
        单选
      </span>
      <!---->
    </div>
    <div
      class="t-radio__border t-radio__border--left"
    />
  </div>
  
</div>
`;

exports[`Radio > Radio mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Radio 单选框
  </h1>
  <p
    class="summary"
  >
    用于在预设的一组选项中执行单项选择，并呈现选择结果。
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        纵向单选框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div>
        <div
          class="t-radio-group radio-group-demo"
          role="radiogroup"
        >
          <!---->
          
          <div
            class="t-radio t-radio--left t-radio--block"
          >
            <input
              class="t-radio__original"
              name="radio"
              type="radio"
              value="1"
            />
            <div
              class="t-radio__icon t-radio__icon--left"
            >
              <div
                class="t-radio__icon-circle"
              />
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title"
                style=""
              >
                单选
              </span>
              <!---->
            </div>
            <div
              class="t-radio__border t-radio__border--left"
            />
          </div>
          <div
            class="t-radio t-radio--left t-radio--block"
          >
            <input
              class="t-radio__original"
              name="radio"
              type="radio"
              value="2"
            />
            <div
              class="t-radio__icon t-radio__icon--left"
            >
              <div
                class="t-radio__icon-circle"
              />
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title"
                style=""
              >
                单选
              </span>
              <!---->
            </div>
            <div
              class="t-radio__border t-radio__border--left"
            />
          </div>
          <div
            class="t-radio t-radio--left t-radio--block"
          >
            <input
              class="t-radio__original"
              name="radio"
              type="radio"
              value="3"
            />
            <div
              class="t-radio__icon t-radio__icon--left t-radio__icon--checked"
            >
              <svg
                class="t-icon t-icon-check-circle-filled t-radio__icon-wrap"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M12 23a11 11 0 100-22 11 11 0 000 22zM7.5 10.59l3 3 6-6L17.91 9l-7.41 7.41L6.09 12l1.41-1.41z"
                  fill="currentColor"
                />
              </svg>
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title"
                style=""
              >
                单选单选单选单选单选单选单选单选单选单选单选单选单选单选单选单选单选单选
              </span>
              <!---->
            </div>
            <div
              class="t-radio__border t-radio__border--left"
            />
          </div>
          <div
            class="t-radio t-radio--left t-radio--block"
          >
            <input
              class="t-radio__original"
              name="radio"
              type="radio"
              value="4"
            />
            <div
              class="t-radio__icon t-radio__icon--left"
            >
              <div
                class="t-radio__icon-circle"
              />
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title"
                style=""
              >
                单选
              </span>
              <div
                class="t-radio__description"
                style=""
              >
                描述信息描述信息描述信息描述信息描述信息描述信息描述信息描述信息描述信息描述信息
              </div>
            </div>
            <div
              class="t-radio__border t-radio__border--left"
            />
          </div>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        横向单选框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-radio-group box"
        role="radiogroup"
      >
        <!---->
        
        <div
          class="t-radio t-radio--left"
        >
          <input
            class="t-radio__original"
            name="radio"
            type="radio"
            value="1"
          />
          <div
            class="t-radio__icon t-radio__icon--left"
          >
            <div
              class="t-radio__icon-circle"
            />
            <!---->
          </div>
          <div
            class="t-radio__content"
          >
            <span
              class="t-radio__title"
              style=""
            >
              单选标题
            </span>
            <!---->
          </div>
          <!---->
        </div>
        <div
          class="t-radio t-radio--left"
        >
          <input
            class="t-radio__original"
            name="radio"
            type="radio"
            value="2"
          />
          <div
            class="t-radio__icon t-radio__icon--left"
          >
            <div
              class="t-radio__icon-circle"
            />
            <!---->
          </div>
          <div
            class="t-radio__content"
          >
            <span
              class="t-radio__title"
              style=""
            >
              单选标题
            </span>
            <!---->
          </div>
          <!---->
        </div>
        <div
          class="t-radio t-radio--left"
        >
          <input
            class="t-radio__original"
            name="radio"
            type="radio"
            value="3"
          />
          <div
            class="t-radio__icon t-radio__icon--left t-radio__icon--checked"
          >
            <svg
              class="t-icon t-icon-check-circle-filled t-radio__icon-wrap"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M12 23a11 11 0 100-22 11 11 0 000 22zM7.5 10.59l3 3 6-6L17.91 9l-7.41 7.41L6.09 12l1.41-1.41z"
                fill="currentColor"
              />
            </svg>
            <!---->
          </div>
          <div
            class="t-radio__content"
          >
            <span
              class="t-radio__title"
              style=""
            >
              单选标题
            </span>
            <!---->
          </div>
          <!---->
        </div>
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件状态
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        单选框禁用态
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-radio-group radio-group-demo space"
        data-v-4455429e=""
        role="radiogroup"
      >
        
        <div
          class="t-radio t-radio--left t-radio--block"
        >
          <input
            class="t-radio__original"
            disabled=""
            name=""
            type="radio"
            value="1"
          />
          <div
            class="t-radio__icon t-radio__icon--left t-radio__icon--checked t-radio__icon--disabled"
          >
            <svg
              class="t-icon t-icon-check-circle-filled t-radio__icon-wrap"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M12 23a11 11 0 100-22 11 11 0 000 22zM7.5 10.59l3 3 6-6L17.91 9l-7.41 7.41L6.09 12l1.41-1.41z"
                fill="currentColor"
              />
            </svg>
            <!---->
          </div>
          <div
            class="t-radio__content"
          >
            <span
              class="t-radio__title t-radio__title--disabled"
              style=""
            >
              选项禁用-已选
            </span>
            <!---->
          </div>
          <div
            class="t-radio__border t-radio__border--left"
          />
        </div>
        <div
          class="t-radio t-radio--left t-radio--block"
        >
          <input
            class="t-radio__original"
            disabled=""
            name=""
            type="radio"
            value="2"
          />
          <div
            class="t-radio__icon t-radio__icon--left t-radio__icon--disabled"
          >
            <div
              class="t-radio__icon-circle t-radio__icon-circle--disabled"
            />
            <!---->
          </div>
          <div
            class="t-radio__content"
          >
            <span
              class="t-radio__title t-radio__title--disabled"
              style=""
            >
              选项禁用-默认
            </span>
            <!---->
          </div>
          <div
            class="t-radio__border t-radio__border--left"
          />
        </div>
        
        <!---->
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 组件样式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        勾选样式
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-radio t-radio--left t-radio--block block"
        data-v-9c2f6eb6=""
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
        />
        <div
          class="t-radio__icon t-radio__icon--left t-radio__icon--checked"
        >
          <svg
            class="t-icon t-icon-check t-radio__icon-wrap"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M20.99 7.38l-10.61 10.6L4 11.63l1.42-1.41 4.95 4.95 9.2-9.2 1.4 1.42z"
              fill="currentColor"
            />
          </svg>
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            单选
          </span>
          <!---->
        </div>
        <div
          class="t-radio__border t-radio__border--left"
        />
      </div>
      <div
        class="t-radio t-radio--left t-radio--block block"
        data-v-9c2f6eb6=""
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
        />
        <div
          class="t-radio__icon t-radio__icon--left t-radio__icon--checked"
        >
          <div
            class="t-radio__icon-dot"
          />
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            单选
          </span>
          <!---->
        </div>
        <div
          class="t-radio__border t-radio__border--left"
        />
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        勾选显示位置
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-radio t-radio--left t-radio--block block"
        data-v-57f93969=""
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
        />
        <div
          class="t-radio__icon t-radio__icon--left t-radio__icon--checked"
        >
          <svg
            class="t-icon t-icon-check-circle-filled t-radio__icon-wrap"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23a11 11 0 100-22 11 11 0 000 22zM7.5 10.59l3 3 6-6L17.91 9l-7.41 7.41L6.09 12l1.41-1.41z"
              fill="currentColor"
            />
          </svg>
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            单选
          </span>
          <!---->
        </div>
        <div
          class="t-radio__border t-radio__border--left"
        />
      </div>
      <div
        class="t-radio t-radio--right t-radio--block block"
        data-v-57f93969=""
      >
        <input
          class="t-radio__original"
          name=""
          type="radio"
        />
        <div
          class="t-radio__icon t-radio__icon--right t-radio__icon--checked"
        >
          <svg
            class="t-icon t-icon-check-circle-filled t-radio__icon-wrap"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23a11 11 0 100-22 11 11 0 000 22zM7.5 10.59l3 3 6-6L17.91 9l-7.41 7.41L6.09 12l1.41-1.41z"
              fill="currentColor"
            />
          </svg>
          <!---->
        </div>
        <div
          class="t-radio__content"
        >
          <span
            class="t-radio__title"
            style=""
          >
            单选
          </span>
          <!---->
        </div>
        <div
          class="t-radio__border t-radio__border--right"
        />
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        非通栏单选样式
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div>
        <div
          class="t-radio-group theme-card"
          role="radiogroup"
        >
          <!---->
          
          <div
            class="t-radio t-radio--left t-radio--block"
          >
            <input
              class="t-radio__original"
              name="radio3"
              type="radio"
              value="1"
            />
            <div
              class="t-radio__icon t-radio__icon--left t-radio__icon--checked"
            >
              <svg
                class="t-icon t-icon-check-circle-filled t-radio__icon-wrap"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M12 23a11 11 0 100-22 11 11 0 000 22zM7.5 10.59l3 3 6-6L17.91 9l-7.41 7.41L6.09 12l1.41-1.41z"
                  fill="currentColor"
                />
              </svg>
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title"
                style=""
              >
                单选
              </span>
              <!---->
            </div>
            <div
              class="t-radio__border t-radio__border--left"
            />
          </div>
          <div
            class="t-radio t-radio--left t-radio--block"
          >
            <input
              class="t-radio__original"
              name="radio3"
              type="radio"
              value="2"
            />
            <div
              class="t-radio__icon t-radio__icon--left"
            >
              <div
                class="t-radio__icon-circle"
              />
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title"
                style=""
              >
                单选
              </span>
              <!---->
            </div>
            <div
              class="t-radio__border t-radio__border--left"
            />
          </div>
          <div
            class="t-radio t-radio--left t-radio--block"
          >
            <input
              class="t-radio__original"
              name="radio3"
              type="radio"
              value="4"
            />
            <div
              class="t-radio__icon t-radio__icon--left"
            >
              <div
                class="t-radio__icon-circle"
              />
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title"
                style=""
              >
                单选标题多行单选标题多行单选标题多行单选标题多行单选标题多行
              </span>
              <!---->
            </div>
            <div
              class="t-radio__border t-radio__border--left"
            />
          </div>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        04 特殊样式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        单选框尺寸规格
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-radio-group"
        data-v-5173b2c6=""
        role="radiogroup"
      >
        <!---->
        
        
        <view
          class="card card--active"
          data-v-5173b2c6=""
        >
          <svg
            class="t-icon t-icon-check card__icon"
            data-v-5173b2c6=""
          >
            <use
              href="#t-icon-check"
            />
          </svg>
          <div
            class="t-radio t-radio--left t-radio--block"
            data-v-5173b2c6=""
          >
            <input
              class="t-radio__original"
              name=""
              type="radio"
              value="0"
            />
            <div
              class="t-radio__icon t-radio__icon--left t-radio__icon--checked"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title"
                style=""
              >
                单选
              </span>
              <div
                class="t-radio__description"
                style=""
              >
                描述信息描述信息描述信息描述信息描述信息
              </div>
            </div>
            <!---->
          </div>
        </view>
        <view
          class="card"
          data-v-5173b2c6=""
        >
          <!--v-if-->
          <div
            class="t-radio t-radio--left t-radio--block"
            data-v-5173b2c6=""
          >
            <input
              class="t-radio__original"
              name=""
              type="radio"
              value="1"
            />
            <div
              class="t-radio__icon t-radio__icon--left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title"
                style=""
              >
                单选
              </span>
              <div
                class="t-radio__description"
                style=""
              >
                描述信息描述信息描述信息描述信息描述信息
              </div>
            </div>
            <!---->
          </div>
        </view>
        <view
          class="card"
          data-v-5173b2c6=""
        >
          <!--v-if-->
          <div
            class="t-radio t-radio--left t-radio--block"
            data-v-5173b2c6=""
          >
            <input
              class="t-radio__original"
              name=""
              type="radio"
              value="2"
            />
            <div
              class="t-radio__icon t-radio__icon--left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title"
                style=""
              >
                单选
              </span>
              <div
                class="t-radio__description"
                style=""
              >
                描述信息描述信息描述信息描述信息描述信息
              </div>
            </div>
            <!---->
          </div>
        </view>
        
        
      </div>
      <view
        class="demo-desc"
        data-v-5173b2c6=""
      >
        横向卡片单选框
      </view>
      <div
        class="t-radio-group horizontal-box"
        data-v-5173b2c6=""
        role="radiogroup"
      >
        <!---->
        
        
        <view
          class="card card--active"
          data-v-5173b2c6=""
        >
          <svg
            class="t-icon t-icon-check card__icon"
            data-v-5173b2c6=""
          >
            <use
              href="#t-icon-check"
            />
          </svg>
          <div
            class="t-radio t-radio--left t-radio--block"
            data-v-5173b2c6=""
          >
            <input
              class="t-radio__original"
              name=""
              type="radio"
              value="0"
            />
            <div
              class="t-radio__icon t-radio__icon--left t-radio__icon--checked"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title"
                style=""
              >
                单选
              </span>
              <!---->
            </div>
            <!---->
          </div>
        </view>
        <view
          class="card"
          data-v-5173b2c6=""
        >
          <!--v-if-->
          <div
            class="t-radio t-radio--left t-radio--block"
            data-v-5173b2c6=""
          >
            <input
              class="t-radio__original"
              name=""
              type="radio"
              value="1"
            />
            <div
              class="t-radio__icon t-radio__icon--left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title"
                style=""
              >
                单选
              </span>
              <!---->
            </div>
            <!---->
          </div>
        </view>
        <view
          class="card"
          data-v-5173b2c6=""
        >
          <!--v-if-->
          <div
            class="t-radio t-radio--left t-radio--block"
            data-v-5173b2c6=""
          >
            <input
              class="t-radio__original"
              name=""
              type="radio"
              value="2"
            />
            <div
              class="t-radio__icon t-radio__icon--left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-radio__content"
            >
              <span
                class="t-radio__title"
                style=""
              >
                单选
              </span>
              <!---->
            </div>
            <!---->
          </div>
        </view>
        
        
      </div>
      
      
    </div>
  </div>
</div>
`;

exports[`Radio > Radio placementVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-radio t-radio--left t-radio--block block"
    data-v-57f93969=""
  >
    <input
      class="t-radio__original"
      name=""
      type="radio"
    />
    <div
      class="t-radio__icon t-radio__icon--left t-radio__icon--checked"
    >
      <svg
        class="t-icon t-icon-check-circle-filled t-radio__icon-wrap"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 23a11 11 0 100-22 11 11 0 000 22zM7.5 10.59l3 3 6-6L17.91 9l-7.41 7.41L6.09 12l1.41-1.41z"
          fill="currentColor"
        />
      </svg>
      <!---->
    </div>
    <div
      class="t-radio__content"
    >
      <span
        class="t-radio__title"
        style=""
      >
        单选
      </span>
      <!---->
    </div>
    <div
      class="t-radio__border t-radio__border--left"
    />
  </div>
  <div
    class="t-radio t-radio--right t-radio--block block"
    data-v-57f93969=""
  >
    <input
      class="t-radio__original"
      name=""
      type="radio"
    />
    <div
      class="t-radio__icon t-radio__icon--right t-radio__icon--checked"
    >
      <svg
        class="t-icon t-icon-check-circle-filled t-radio__icon-wrap"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 23a11 11 0 100-22 11 11 0 000 22zM7.5 10.59l3 3 6-6L17.91 9l-7.41 7.41L6.09 12l1.41-1.41z"
          fill="currentColor"
        />
      </svg>
      <!---->
    </div>
    <div
      class="t-radio__content"
    >
      <span
        class="t-radio__title"
        style=""
      >
        单选
      </span>
      <!---->
    </div>
    <div
      class="t-radio__border t-radio__border--right"
    />
  </div>
  
</div>
`;

exports[`Radio > Radio statusVue demo works fine 1`] = `
<div
  class="t-radio-group radio-group-demo space"
  data-v-4455429e=""
  role="radiogroup"
>
  
  <div
    class="t-radio t-radio--left t-radio--block"
  >
    <input
      class="t-radio__original"
      disabled=""
      name=""
      type="radio"
      value="1"
    />
    <div
      class="t-radio__icon t-radio__icon--left t-radio__icon--checked t-radio__icon--disabled"
    >
      <svg
        class="t-icon t-icon-check-circle-filled t-radio__icon-wrap"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 23a11 11 0 100-22 11 11 0 000 22zM7.5 10.59l3 3 6-6L17.91 9l-7.41 7.41L6.09 12l1.41-1.41z"
          fill="currentColor"
        />
      </svg>
      <!---->
    </div>
    <div
      class="t-radio__content"
    >
      <span
        class="t-radio__title t-radio__title--disabled"
        style=""
      >
        选项禁用-已选
      </span>
      <!---->
    </div>
    <div
      class="t-radio__border t-radio__border--left"
    />
  </div>
  <div
    class="t-radio t-radio--left t-radio--block"
  >
    <input
      class="t-radio__original"
      disabled=""
      name=""
      type="radio"
      value="2"
    />
    <div
      class="t-radio__icon t-radio__icon--left t-radio__icon--disabled"
    >
      <div
        class="t-radio__icon-circle t-radio__icon-circle--disabled"
      />
      <!---->
    </div>
    <div
      class="t-radio__content"
    >
      <span
        class="t-radio__title t-radio__title--disabled"
        style=""
      >
        选项禁用-默认
      </span>
      <!---->
    </div>
    <div
      class="t-radio__border t-radio__border--left"
    />
  </div>
  
  <!---->
</div>
`;
